Added test results

--- a/circle.yml
+++ b/circle.yml
@@ -3,3 +3,7 @@ dependencies:
     - nvm use 5
     - nvm alias default 5
     - npm install -g npm
+test:
+  post:
+    - cp test-results.xml $CIRCLE_TEST_REPORTS
+    - cp -R coverage/* "$CIRCLE_TEST_REPORTS"
