--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "url": "git@github.com:daviesgeek/git-revision.git"
   },
   "scripts": {
-    "test": "node_modules/.bin/mocha"
+    "test": "node_modules/.bin/istanbul cover node_modules/.bin/_mocha -- -R mocha-junit-reporter"
   },
   "license": "MIT",
   "engines": {
@@ -17,6 +17,8 @@
   },
   "devDependencies": {
     "chai": "^3.5.0",
-    "mocha": "^2.4.5"
+    "istanbul": "^0.4.2",
+    "mocha": "^2.4.5",
+    "mocha-junit-reporter": "^1.9.1"
   }
 }
